vs align bug found

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,14 @@ nav {
     align-content:center;
 }
 
+.flexCenter {
+    display:flex;
+    margin-left:auto;
+    margin-right:auto;
+    justify-content: center;
+    align-content:center;
+}
+
 .container {
     display:grid;
     grid-gap: 50px;
@@ -172,10 +180,9 @@ body {
 }
 
 p.log {
-    height: 6em;
     border: 5px ridge rgb(180,154,2);
     overflow-y: scroll;
-    height: 300px;
+    height: 300px; 
     background:white;
     color: darkred;
     font-weight: bolder;
@@ -194,16 +201,19 @@ p.log {
 /* High Score Log Styles */
 .scoreLog {
     margin: .75rem auto auto auto;
-    padding:0.25rem;
+    /* padding:0.25rem; */
     height:auto;
+    width: 100%;
 }
 
-p.score {
-    width: 300px;
+.score {
     border: 5px ridge rgb(180,154,2);
     overflow-y: scroll;
-    height: 300px;
     background:white;
     color: darkred;
     font-weight: bolder;
+    min-width: 100%;
+    min-height: 300px;
 }
+
+
